<?xml version="1.0" encoding="utf-8"?>
<com.nguyenhoanglam.progresslayout.ProgressLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/progressLayout"
    android:layout_width="match_parent"
    app:loadingProgressBarColor="@color/teal"
    app:loadingProgressBarRadius="200dp"
    app:loadingProgressBarSpinWidth="10dp"
    android:layout_height="match_parent"
    app:ignore="NamespaceTypo">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="10dp"
            fab:menu_labels_style="@style/MenuLabelsStyle"
            fab:menu_labels_showAnimation="@anim/jump_from_down"
            fab:menu_labels_hideAnimation="@anim/jump_to_down"
            fab:menu_animationDelayPerItem="0"
            fab:menu_shadowColor="#444"
            fab:menu_colorNormal="@color/colorRed"
            fab:menu_colorPressed="@color/colorGreen"
            fab:menu_colorRipple="@color/colorGreen">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_label="@string/toutescategories"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/toutescategories"
                fab:fab_colorPressed="@color/toutescategories"
                fab:fab_colorRipple="@color/toutescategories"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonCoupure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_label="@string/coupureeau"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/coupureeau"
                fab:fab_colorPressed="@color/coupureeau"
                fab:fab_colorRipple="@color/coupureeau"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonPasAccesHabitant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_label="@string/pas_access_habitant"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/pas_access_habitant"
                fab:fab_colorPressed="@color/pas_access_habitant"
                fab:fab_colorRipple="@color/pas_access_habitant"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonPollution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/pollution_eau"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/pollution_eau"
                fab:fab_colorPressed="@color/pollution_eau"
                fab:fab_colorRipple="@color/pollution_eau"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtCorruption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_label="@string/corruption"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/corruption"
                fab:fab_colorPressed="@color/corruption"
                fab:fab_colorRipple="@color/corruption"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonPotabilite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/potabilite_eau"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/potabilite_eau"
                fab:fab_colorPressed="@color/potabilite_eau"
                fab:fab_colorRipple="@color/potabilite_eau"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonDistributionNonEquitable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/distribution_non_equitable"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/distribution_non_equitable"
                fab:fab_colorPressed="@color/distribution_non_equitable"
                fab:fab_colorRipple="@color/distribution_non_equitable"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonAssainissement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/assainissement"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/assainissement"
                fab:fab_colorPressed="@color/assainissement"
                fab:fab_colorRipple="@color/assainissement"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonSurexploiatation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/surexploiatation"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/surexploiatation"
                fab:fab_colorPressed="@color/surexploiatation"
                fab:fab_colorRipple="@color/surexploiatation"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonFuiteEau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/fuite_eau"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/fuite_eau"
                fab:fab_colorPressed="@color/fuite_eau"
                fab:fab_colorRipple="@color/fuite_eau"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/mActionButtonMouvementDeProtestation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                fab:fab_label="@string/mouvement_protestation"
                fab:fab_showAnimation="@anim/jump_from_down"
                fab:fab_hideAnimation="@anim/jump_to_down"
                fab:fab_colorNormal="@color/mouvement_protestation"
                fab:fab_colorPressed="@color/mouvement_protestation"
                fab:fab_colorRipple="@color/mouvement_protestation"
                fab:fab_shadowColor="#444"
                fab:fab_size="mini"
                />



        </com.github.clans.fab.FloatingActionMenu>
        <com.joaquimley.faboptions.FabOptions
            android:id="@+id/fab_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:button_menu="@menu/menu"
            android:layout_gravity="bottom|center_horizontal" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>
    </FrameLayout>
</com.nguyenhoanglam.progresslayout.ProgressLayout>
